* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.5.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
- Add RockyLinux 8 support

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.1
- Removed EL6 support
- Fixed an error in the Documentation in the module.

* Mon Feb 24 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
- Add EL8 support
- Code cleanup
- Allow users to be any String value

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.2.0-0
- Support concat 6.x.

* Tue Jul 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1-0
- Updated README.md
- Created REFERENCE.md
- Support puppetlabs-stdlib 6

* Mon Apr 01 2019 Zach <turtles.be.the.best@gmail.com> - 0.1.0-0
- Added pam_oath.so configuration code
- Added strict type matching of oath::oath_users hieradata
- Created Rspec tests checking correct catalog creation
- Skeleton acceptance test created (and working)
- Updated documentation to reflect current state of the module